[gd_scene load_steps=68 format=2]

[ext_resource path="res://src/Actors/Bosses/BossAI.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/trilobyte.res" type="SpriteFrames" id=2]
[ext_resource path="res://src/Actors/Modules/Enemy/BossDamage.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=4]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/ArmorSprite.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/dps_hud.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/Idle.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/enemy_crystal_wall.res" type="SpriteFrames" id=8]
[ext_resource path="res://src/Effects/Materials/BossExplosion.tres" type="Material" id=9]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/ArmorDetector.gd" type="Script" id=10]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/GuardBreak.gd" type="Script" id=11]
[ext_resource path="res://src/Actors/Enemies/Shared/LongBossDeath.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/TriloArmor.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/TriloShield.gd" type="Script" id=14]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/naked_trilobyte.res" type="SpriteFrames" id=15]
[ext_resource path="res://src/Actors/Panda.gd" type="Script" id=16]
[ext_resource path="res://src/Actors/Bosses/BossStun.gd" type="Script" id=17]
[ext_resource path="res://src/Effects/Textures/charged_flash.png" type="Texture" id=18]
[ext_resource path="res://src/Sounds/MM - Equip.wav" type="AudioStream" id=19]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/EarthPursuit.gd" type="Script" id=20]
[ext_resource path="res://src/Effects/Textures/smoke.png" type="Texture" id=21]
[ext_resource path="res://src/Effects/Materials/x_dash_smoke.tres" type="Material" id=22]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/EarthCrystals.gd" type="Script" id=23]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/EarthThrow.gd" type="Script" id=24]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/EnemyCrystalWall.tscn" type="PackedScene" id=25]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/EarthWave.gd" type="Script" id=26]
[ext_resource path="res://src/Sounds/MMX - Enemy Helmet Hit.ogg" type="AudioStream" id=27]
[ext_resource path="res://src/Sounds/HIT_BOSS.wav" type="AudioStream" id=28]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=29]
[ext_resource path="res://src/Effects/Materials/BossSmokeParticlesMedium.tres" type="Material" id=30]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/EnemyBouncer.tscn" type="PackedScene" id=31]
[ext_resource path="res://src/Effects/ShieldBreak/shieldbreak.res" type="SpriteFrames" id=32]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/TrilobyteIntro.gd" type="Script" id=33]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=34]
[ext_resource path="res://src/Sounds/Trilobyte - Create Crystal.ogg" type="AudioStream" id=35]
[ext_resource path="res://src/Effects/Textures/remains_purple.png" type="Texture" id=36]
[ext_resource path="res://src/Sounds/Ice Break.wav" type="AudioStream" id=37]
[ext_resource path="res://src/DialogSystem/Dialogs/Stages/Trilobyte_Dialogue.tres" type="Resource" id=38]
[ext_resource path="res://src/Effects/Materials/RemainsParticle.tres" type="Material" id=39]
[ext_resource path="res://src/Sounds/Trilobyte - Throw.ogg" type="AudioStream" id=40]
[ext_resource path="res://src/Sounds/Trilobyte - Desperation.ogg" type="AudioStream" id=41]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/ReduceableDeath.gd" type="Script" id=42]
[ext_resource path="res://src/Actors/Bosses/EarthrockTrilobyte/CrystalWarning.tscn" type="PackedScene" id=43]
[ext_resource path="res://src/AchievementSystem/BossAchievementHandler.gd" type="Script" id=44]
[ext_resource path="res://src/AchievementSystem/Achievements/TRILOBYTEBUSTERONLY.tres" type="Resource" id=45]
[ext_resource path="res://src/AchievementSystem/Achievements/TRILOBYTENODAMAGE.tres" type="Resource" id=46]
[ext_resource path="res://src/AchievementSystem/Achievements/TRILOBYTENAKED.tres" type="Resource" id=47]

[sub_resource type="RectangleShape2D" id=72]
extents = Vector2( 12, 19.5 )

[sub_resource type="RectangleShape2D" id=78]
extents = Vector2( 8, 15 )

[sub_resource type="CanvasItemMaterial" id=77]
render_priority = -1
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=76]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id=69]
extents = Vector2( 24.125, 26.1875 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 18 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 18 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 18 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 18 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 18 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 18 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 18 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 18 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="SpriteFrames" id=75]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=73]
extents = Vector2( 16, 22 )

[sub_resource type="Curve" id=70]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=43]
curve = SubResource( 70 )

[sub_resource type="ParticlesMaterial" id=71]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 43 )

[sub_resource type="RectangleShape2D" id=74]
extents = Vector2( 6, 6 )

[node name="Trilobyte" type="KinematicBody2D" groups=["Bosses", "Enemies"]]
z_index = 5
collision_layer = 8
script = ExtResource( 16 )
max_health = 140.0
wall_distance = 16

[node name="BossAI" type="Node2D" parent="."]
script = ExtResource( 1 )
time_between_attacks = Vector2( 0.5, 1 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 8.5 )
z_index = 8
z_as_relative = false
shape = SubResource( 72 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 29 )
position = Vector2( 0, -5 )
z_index = 1
frames = ExtResource( 2 )
animation = "idle"
frame = 2
playing = true
flip_h = true
script = ExtResource( 5 )
naked_sprites = ExtResource( 15 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -6.5, 3.5 )
scale = Vector2( 4.35, 4.25 )

[node name="area2D" type="Area2D" parent="."]
visible = false
z_index = 2
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 1, 8 )
shape = SubResource( 78 )

[node name="Intro" type="Node2D" parent="."]
script = ExtResource( 33 )
actions = [ "Event" ]
dialogue = ExtResource( 38 )

[node name="crystal" type="AnimatedSprite" parent="Intro"]
visible = false
position = Vector2( 1, -4 )
z_index = 2
frames = ExtResource( 8 )
animation = "intro"
frame = 6
playing = true

[node name="crystal2" type="AnimatedSprite" parent="Intro"]
visible = false
position = Vector2( -20, -6 )
z_index = 1
frames = ExtResource( 8 )
animation = "intro"
frame = 6
playing = true

[node name="crystal3" type="AnimatedSprite" parent="Intro"]
visible = false
position = Vector2( 24, -6 )
z_index = 1
frames = ExtResource( 8 )
animation = "intro"
frame = 6
playing = true

[node name="crystal_remains" type="Particles2D" parent="Intro"]
material = SubResource( 77 )
z_index = 2
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 39 )
texture = ExtResource( 36 )

[node name="crystal2_remains" type="Particles2D" parent="Intro"]
material = SubResource( 77 )
position = Vector2( -22, 0 )
z_index = 2
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 39 )
texture = ExtResource( 36 )

[node name="crystal3_remains" type="Particles2D" parent="Intro"]
material = SubResource( 77 )
position = Vector2( 24, 0 )
z_index = 2
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 39 )
texture = ExtResource( 36 )

[node name="break" type="AudioStreamPlayer2D" parent="Intro"]
stream = ExtResource( 37 )
volume_db = -6.832
max_distance = 600.0
bus = "SFX"
script = ExtResource( 34 )

[node name="appear" type="AudioStreamPlayer2D" parent="Intro"]
stream = ExtResource( 35 )
volume_db = -6.832
max_distance = 600.0
bus = "SFX"
script = ExtResource( 34 )

[node name="Idle" type="Node2D" parent="."]
script = ExtResource( 7 )
conflicting_moves = [ "Anything" ]
animation = "idle"
should_turn = false

[node name="EarthPursuit" type="Node2D" parent="."]
script = ExtResource( 20 )
actions = [ "Event" ]
animation = "run_start"
horizontal_velocity = 320.0

[node name="dash_smoke" type="Particles2D" parent="EarthPursuit"]
material = SubResource( 76 )
position = Vector2( 0, 26 )
z_index = 1
emitting = false
lifetime = 0.75
local_coords = false
process_material = ExtResource( 22 )
texture = ExtResource( 21 )

[node name="EarthCrystals" type="Node2D" parent="."]
position = Vector2( 0, 2 )
script = ExtResource( 23 )
crystal = ExtResource( 25 )
warning = ExtResource( 43 )

[node name="EarthThrow" type="Node2D" parent="."]
script = ExtResource( 24 )
bouncer = ExtResource( 31 )

[node name="throw" type="AudioStreamPlayer2D" parent="EarthThrow"]
stream = ExtResource( 40 )
volume_db = -6.832
max_distance = 600.0
bus = "SFX"
script = ExtResource( 34 )

[node name="EarthWave" type="Node2D" parent="."]
position = Vector2( 0, -2 )
script = ExtResource( 26 )
horizontal_velocity = 320.0
desperation_attack = true
crystal = ExtResource( 25 )

[node name="roar" type="AudioStreamPlayer2D" parent="EarthWave"]
position = Vector2( 0, 2 )
stream = ExtResource( 41 )
volume_db = -6.832
max_distance = 600.0
bus = "SFX"
script = ExtResource( 34 )

[node name="EnemyShield" type="Node2D" parent="."]
process_priority = -5
position = Vector2( 0, 9 )
z_index = 2
script = ExtResource( 14 )
breakable = false

[node name="hittable_area" type="Area2D" parent="EnemyShield"]
process_priority = -5
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="EnemyShield/hittable_area"]
process_priority = -5
position = Vector2( 0.125, -5.8125 )
shape = SubResource( 69 )

[node name="hitSound" type="AudioStreamPlayer2D" parent="EnemyShield"]
stream = ExtResource( 27 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="armor_equip" type="AudioStreamPlayer2D" parent="EnemyShield"]
stream = ExtResource( 19 )
volume_db = -6.832
pitch_scale = 1.5
max_distance = 600.0
bus = "SFX"

[node name="flash" type="AnimatedSprite" parent="EnemyShield"]
modulate = Color( 0.933333, 0.701961, 0.619608, 1 )
frames = SubResource( 75 )
frame = 8
playing = true
flip_h = true

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 3 )
max_flash_time = 0.35
weakenesses = [ "SqueezeBomb", "SpiralMagnum", "Juuhazan" ]

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
pause_mode = 2
stream = ExtResource( 28 )
volume_db = -3.0
max_distance = 600.0
bus = "SFX"

[node name="dps" type="RichTextLabel" parent="Damage"]
visible = false
margin_left = -18.0
margin_top = -69.0
margin_right = 59.0
margin_bottom = -52.0
text = "0.0"
script = ExtResource( 6 )

[node name="DamageOnTouch" type="Node2D" parent="."]
visible = false
script = ExtResource( 4 )
damage = 2.0

[node name="area2D" type="Area2D" parent="DamageOnTouch"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="DamageOnTouch/area2D"]
position = Vector2( 0, 7 )
shape = SubResource( 73 )

[node name="BossStun" type="Node2D" parent="."]
script = ExtResource( 17 )
conflicting_moves = [ "BossDeath" ]
actions = [ "Event" ]
animation = "death"
horizontal_velocity = 60.0
jump_velocity = 100.0

[node name="BossDeath" parent="." instance=ExtResource( 12 )]
position = Vector2( 0, 8 )
script = ExtResource( 42 )
death_animation = "death"
collectible = "trilobyte_weapon"

[node name="Explosion Particles" parent="BossDeath" index="0"]
amount = 24
process_material = ExtResource( 9 )

[node name="Smoke Particles" parent="BossDeath" index="1"]
process_material = ExtResource( 30 )

[node name="background_light" parent="BossDeath" index="3"]
position = Vector2( 6, 2 )

[node name="Remains" parent="BossDeath" index="4"]
process_material = SubResource( 71 )

[node name="ArmorDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 1048576
script = ExtResource( 10 )

[node name="collisionShape2D" type="CollisionShape2D" parent="ArmorDetector"]
position = Vector2( 0, 15 )
shape = SubResource( 74 )

[node name="GuardBreak" type="Node" parent="."]
script = ExtResource( 11 )
armor_scene = ExtResource( 13 )

[node name="break_vfx" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
z_index = 25
frames = ExtResource( 32 )
frame = 9
playing = true

[node name="AchievementHandler" type="Node" parent="."]
script = ExtResource( 44 )
_desperation = NodePath("../EarthWave")
no_damage = ExtResource( 46 )
buster_only = ExtResource( 45 )
naked = ExtResource( 47 )

[connection signal="activated" from="BossAI" to="EnemyShield" method="_on_BossAI_activated"]
[connection signal="ability_start" from="EarthWave" to="BossStun" method="deactivate"]
[connection signal="ready_for_stun" from="EarthWave" to="BossStun" method="reactivate"]
[connection signal="activated" from="EnemyShield" to="animatedSprite" method="_on_EnemyShield_activated"]
[connection signal="activated" from="EnemyShield" to="EarthPursuit" method="on_catch_armor"]
[connection signal="deactivated" from="EnemyShield" to="animatedSprite" method="_on_EnemyShield_deactivated"]
[connection signal="guard_broken" from="EnemyShield" to="GuardBreak" method="_on_guard_break"]
[connection signal="dps" from="Damage" to="Damage/dps" method="_on_Damage_dps"]
[connection signal="armor_catch" from="ArmorDetector" to="EnemyShield" method="_on_armor_catch"]
[connection signal="body_entered" from="ArmorDetector" to="ArmorDetector" method="_on_body_entered"]
[connection signal="body_exited" from="ArmorDetector" to="ArmorDetector" method="_on_body_exited"]
[connection signal="created_armor" from="GuardBreak" to="BossDeath" method="_on_created_armor"]
[connection signal="removed_armor" from="GuardBreak" to="EnemyShield" method="_on_removed_armor"]

[editable path="BossDeath"]
